--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en" style="width:100%; height:100%;">
 <head>
+ <link rel="shortcut icon" type="image/x-icon" href="C:\Users\wwstudent\Desktop/usa.png">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <title>Cody's Resume</title>
 </head>
