--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Cody's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/Cody-Impson/Cody-Impson/raw/main/Cody%20Impson%20Final%20Resume.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://github.com/Cody-Impson/Cody-Impson/raw/main/Cody%20Impson%20Resume.pdf" frameborder="0"></iframe>
   </body>
 </html>
